Fix styling for dark mode by creating new composable

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,5 +1,14 @@
-// draw nav
+// dark overrides
+.body--dark {
+  .bg-primary, .q-layout__section--marginal {
+    background-color: $primary-dark !important;
+  }
+  .q-drawer {
+    border: none;
+  }
+}
 
+// draw nav
 .q-drawer {
   .q-item {
     opacity: 0.6;
@@ -20,6 +29,9 @@ input::-webkit-inner-spin-button {
 .entries {
   .q-slide-item {
     border: 1px solid rgba(0, 0, 0, 0.12);
+    .body--dark & {
+      border: 1px solid rgba(255, 255, 255, 0.2)
+    }
     &:not(:first-child) {
       margin-top: -1px;
     }
